feat(ui): update implementation tracker with AI QA agent prompt, IDM parity context menu, timer dialog styling, and click separation